--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -81,6 +81,11 @@
             Generate Example Footnote
         </button>
 
+        <!-- Add Generated Footnote Section -->
+        <div id="generatedFootnote" class="generated-footnote hidden">
+            <!-- Content will be populated by JavaScript -->
+        </div>
+
         <div class="actionable-steps">
             <h3>Actionable Next Steps (Optional)</h3>
             <div id="actionableSteps" class="steps-list"></div>
